# SIC-XE

./: CMakeLists.txt  README.md  input.txt  output.txt
include/: parser.h  pass_1.h  pass_2.h  programGenerator.h  structs.h  tables.h  utils.h
src/: Makefile  assembler.cpp
